--- a/Book_Management/WindowsFormsApp/WindowsFormsApp/Properties/Resources.resx
+++ b/Book_Management/WindowsFormsApp/WindowsFormsApp/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="hlc11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hlc11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
