--- a/Book_Management/WindowsFormsApp/WindowsFormsApp/Properties/Resources.resx
+++ b/Book_Management/WindowsFormsApp/WindowsFormsApp/Properties/Resources.resx
@@ -118,10 +118,31 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="book_info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book_info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="book_location" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book_location.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="book_management" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book_management.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="hlc11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hlc11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="my_information" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\my_information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="overdue_management" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\overdue_management.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rental_list" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rental_list.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\upload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user_management" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_management.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
