--- a/Book_Management/WindowsFormsApp/WindowsFormsApp/Properties/Resources.resx
+++ b/Book_Management/WindowsFormsApp/WindowsFormsApp/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="user_management" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user_management.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
